# Spacenations-Tools

./: .dockerignore  .dockerignore.railway  .env.example  .eslintrc.js  .firebaserc  .gitignore  .nixpacksignore  .nojekyll  .railwayignore  4ground-css-framework.css  4ground-jtl-adaptation-guide.md  ADMIN_LOGIN_FIX.md  ANALYTICS_SETUP.md  API_KORREKTUR.md  AUTOMATISCHER_WEBHOOK_ANLEITUNG.md  BENUTZERNAME_LOGIN_GUIDE.md  BROWSER_ERROR_HANDLING.md  CACHE_CLEAR_ANLEITUNG.md  COMMIT_SUMMARY.md  CRAWLING_SYSTEM_README.md  DISCORD_WEBHOOK_ANLEITUNG.md  Dockerfile  Dockerfile.railway  ERFOLG_BERICHT.md  FINAL_STATUS_CHECK.md  FIREBASE_AUTH_DEBUG.html  FIREBASE_CHECKLIST.md  FIREBASE_COMPLETE_SETUP.md  FIREBASE_CONFIGURATION_CHECK.md  FIREBASE_DATABASE_STRUCTURE.md  FIREBASE_DEBUG_TOOL.html  FIREBASE_PERMISSION_FIX.md  FIREBASE_RULES_STEP_BY_STEP.md  FIREBASE_RULES_URGENT_FIX.md  FIREBASE_RULES_VISUAL_GUIDE.md  FIREBASE_SECURITY_RULES_FIX.md  FIREBASE_SETUP_ANLEITUNG.md  FIREBASE_SETUP_GUIDE.md  FIREBASE_SETUP_WITH_SCREENSHOTS.md  FIREBASE_STATUS_SUMMARY.md  (+141 more)
api/: crawler.js
css/: dashboard-navigation.css  global-footer.css
docs/: README.md  admin-dashboard.html  admin-login.html  bootstrap-superadmin.html  dashboard-as-counter.html  dashboard-raid-counter.html  dashboard-sabo-counter.html  dashboard.html  debug-login.html  index.html  main.html  register.html
examples/: admin-dashboard.html  alliance-dashboard.html  firebase-login.html  member-dashboard.html
functions/: adminOverview.js
js/: admin-auth.js  admin-dashboard-enhanced.js  admin-dashboard.js  admin-debug.js  (+36 more)
(+60 files in other folders)
